gitops/manifests/notifiq/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: notifiq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifiq
  namespace: notifiq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifiq
  template:
    metadata:
      labels:
        app: notifiq
        app.kubernetes.io/name: notifiq
    spec:
      containers:
        - name: notifiq
          image: registry.local.timmybtech.com/notifiq:v1.5.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notifiq
  namespace: notifiq
spec:
  type: ClusterIP
  selector:
    app: notifiq
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: notifiq-internal
  namespace: notifiq
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`notifiq.local.timmybtech.com`)
      kind: Rule
      services:
        - name: notifiq
          port: 8080
  tls:
    secretName: local-timmybtech-com-tls
